fix index.utf8 title and spelling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index.utf8</title>
+<title>Dallas Data Science Collection</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -405,14 +405,17 @@ summary {
 
 
 
-<h1 class="title toc-ignore"><br>
-<center>
-Dallas Data Science Collection
-</center></h1>
+<h1 class="title toc-ignore">Dallas Data Science Collection</h1>
 
 </div>
 
 
+<style type="text/css">
+h1.title {
+  text-align: center;
+  margin-top: 1em;
+}
+</style>
 <hr>
 <br>
 <center>
@@ -439,7 +442,7 @@ Link
 Git &amp; GitHub Tutorial for Scientists: It’s Not Only for Programmers
 </td>
 <td style="text-align:left;">
-Michaela Chan &amp; Ekarin Pongpipat
+Micaela Chan &amp; Ekarin Pongpipat
 </td>
 <td style="text-align:left;">
 eBook
